<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E9EB"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="25dp" >

    <EditText
        android:id="@+id/usernameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:gravity="right"
        android:hint="@string/username_et_hint"
        android:singleLine="true"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/passwordET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:gravity="right"
        android:hint="@string/password_et_hint"
        android:inputType="textPassword"
        android:textSize="14sp" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#D91622"
        android:gravity="center"
        android:text="@string/login_btn_text"
        android:textColor="#ffffff"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/restPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/rest_password_tv"
        android:textColor="#000000"
        android:textSize="14sp" />

</LinearLayout>