<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E6E9EB"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="25dp" >

        <TextView
            android:id="@+id/usernameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:gravity="right"
            android:text="@string/username_et_hint"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/usernameET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:ems="10"
            android:gravity="right"
            android:inputType="text"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:gravity="right"
            android:text="@string/password_et_hint"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/passwordET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:ems="10"
            android:gravity="right"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/confirmPasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:gravity="right"
            android:text="@string/confirm_password_et_hint"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/confirmPasswordET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:ems="10"
            android:gravity="right"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:gravity="right"
            android:text="@string/email_et_hint"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/emailET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:ems="10"
            android:gravity="right"
            android:inputType="textEmailAddress"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/userTypeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/update_user_type"
            android:textSize="13sp" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/donatorRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donator"
                android:textSize="13sp" />

            <RadioButton
                android:id="@+id/patientRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patient"
                android:textSize="13sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:gravity="right"
            android:text="@string/name"
            android:textSize="13sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/nameET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:ems="10"
            android:gravity="right"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="13sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/patientFileNumLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:gravity="right"
            android:text="@string/patient_file_num_et_hint"
            android:textSize="13sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/patientFileNumET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:ems="10"
            android:gravity="right"
            android:inputType="number"
            android:textSize="13sp"
            android:visibility="gone" />

        <Spinner
            android:id="@+id/blood_types_spr"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="right"
            android:visibility="gone" />

        <Spinner
            android:id="@+id/cities_names_spr"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:background="#D91622"
            android:text="@string/update_btn_text"
            android:textColor="#ffffff"
            android:textSize="15sp" />
    </LinearLayout>

</ScrollView>