<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E9EB"
    android:padding="25dp"
    tools:context="com.GradProject.your_guide.Home" >

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signUpBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="#D91622"
        android:text="@string/login_btn_text"
        android:textColor="#ffffff"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/iv_person"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/loginBtn"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="120dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/img_desc"
        android:gravity="center"
        android:src="@drawable/home_activity_logo" />

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="#D91622"
        android:text="@string/signup_btn_text"
        android:textColor="#ffffff"
        android:textSize="16sp" />

</RelativeLayout>